--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,11 @@ Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+Content/StarterContent
+
+Content/FirstPerson
+
+Content/FirstPersonBP
+
+Content/FirstPersonCpp
